--- a/mirror.html
+++ b/mirror.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Serialization demo</title>
+    <title>Smartmirror v1</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../dist/gridstack.css"/>
@@ -22,7 +22,7 @@
 
     <style type="text/css">
         .grid-stack {
-            background: lightgoldenrodyellow;
+            background: black;
         }
 
         .grid-stack-item-content {
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div class="container-fluid">
-        <h1>Serialization demo</h1>
+        <h1>Mirror modules</h1>
 
         <div>
             <a class="btn btn-default" id="save-grid" href="#">Save Grid</a>
