--- a/mirror.html
+++ b/mirror.html
@@ -17,7 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.0/jquery-ui.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/0.3.0/gridstack.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/0.3.0/gridstack.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/0.3.0/gridstack.jQueryUI.js"></script>
 
     <style type="text/css">
@@ -62,7 +62,7 @@
             new function () {
                 this.serializedData = [
                     {x: 0, y: 0, width: 2, height: 2},
-                    {x: 3, y: 1, width: 1, height: 2},
+                    {x: 3, y: 1, width: 1, height: 1},
                     {x: 4, y: 1, width: 1, height: 1},
                     {x: 2, y: 3, width: 3, height: 1},
                     {x: 1, y: 4, width: 1, height: 1},
