--- a/mirror.html
+++ b/mirror.html
@@ -22,7 +22,7 @@
 
     <style type="text/css">
         .grid-stack {
-            background: white;
+            background: gray;
         }
 
         .grid-stack-item-content {
@@ -61,7 +61,7 @@
 
             new function () {
                 this.serializedData = [
-                    {x: 0, y: 0, width: 2, height: 2},
+                    {x: 0, y: 0, width: 2, height: 2, module: 'clock'},
                     {x: 3, y: 1, width: 1, height: 1},
                     {x: 4, y: 1, width: 1, height: 1},
                     {x: 2, y: 3, width: 3, height: 1},
